// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React should allow async changes 1`] = `
<ul>
  <li>
    foo
  </li>
  <li>
    bar
  </li>
</ul>
`;

exports[`React should allow async changes 2`] = `
<ul>
  <li>
    foo2
  </li>
  <li>
    bar
  </li>
</ul>
`;

exports[`React should allow async changes 3`] = `
<ul>
  <li>
    foo23
  </li>
  <li>
    bar
  </li>
</ul>
`;

exports[`React should allow async changes 4`] = `
<ul>
  <li>
    foo23
  </li>
  <li>
    bar
  </li>
</ul>
`;

exports[`React should allow usage of computed 1`] = `
<ul>
  <li>
    FOO
  </li>
  <li>
    BAR
  </li>
</ul>
`;

exports[`React should allow usage of computed 2`] = `
<ul>
  <li>
    FOO
  </li>
  <li>
    BAR
  </li>
  <li>
    BAZ
  </li>
</ul>
`;

exports[`React should allow using hooks 1`] = `
<h1>
  bar!
</h1>
`;

exports[`React should handle arrays 1`] = `
<ul>
  <li>
    foo
  </li>
  <li>
    bar
  </li>
</ul>
`;

exports[`React should handle arrays 2`] = `
<ul>
  <li>
    foo
  </li>
  <li>
    bar
  </li>
  <li>
    baz
  </li>
</ul>
`;

exports[`React should handle cross async action changes 1`] = `
<h1>
  bar121
</h1>
`;

exports[`React should handle objects 1`] = `
<ul>
  <li>
    bar
  </li>
  <li>
    baz
  </li>
  <li>
    boing
  </li>
</ul>
`;

exports[`React should handle objects 2`] = `
<ul>
  <li>
    BAR
  </li>
  <li>
    BAZ
  </li>
  <li>
    BOING
  </li>
</ul>
`;

exports[`React should render on object add and remove 1`] = `
<h1>
  does not exist
</h1>
`;

exports[`React should render on object add and remove 2`] = `
<h1>
  bar
</h1>
`;

exports[`React should render on object add and remove 3`] = `
<h1>
  does not exist
</h1>
`;

exports[`React should target state 1`] = `
<ul>
  <li>
    foo
  </li>
</ul>
`;

exports[`React should target state 2`] = `
<ul>
  <li>
    foo2
  </li>
</ul>
`;

exports[`React should target state 3`] = `
<ul>
  <li>
    foo3
  </li>
</ul>
`;
